--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+
 
 apply plugin: 'kotlin-android-extensions'
 
@@ -29,7 +31,30 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    // Material Design
     implementation 'com.google.android.material:material:1.0.0'
+
+    // Firebase
+    implementation "com.google.firebase:firebase-core:17.2.0"
+    implementation 'com.google.firebase:firebase-auth:19.0.0'
+    implementation 'com.google.firebase:firebase-database:19.0.0'
+
+
+    // Dagger
+    implementation "com.google.dagger:dagger:2.22"
+    implementation "com.google.dagger:dagger-android:2.22"
+    implementation "com.google.dagger:dagger-android-support:2.22"
+    kapt "com.google.dagger:dagger-compiler:2.15"
+    kapt "com.google.dagger:dagger-android-processor:2.12"
+
+
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.5.1'
+
+    // Lottie
+    implementation 'com.airbnb.android:lottie:3.0.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
