--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -43,11 +43,11 @@ dependencies {
 
 
     // Dagger
-    implementation "com.google.dagger:dagger:2.22"
-    implementation "com.google.dagger:dagger-android:2.22"
-    implementation "com.google.dagger:dagger-android-support:2.22"
-    kapt "com.google.dagger:dagger-compiler:2.15"
-    kapt "com.google.dagger:dagger-android-processor:2.12"
+    implementation "com.google.dagger:dagger:2.23.2"
+    implementation "com.google.dagger:dagger-android:2.23.2"
+    implementation "com.google.dagger:dagger-android-support:2.23.2"
+    kapt "com.google.dagger:dagger-compiler:2.23.2"
+    kapt "com.google.dagger:dagger-android-processor:2.23.2"
 
 
     // Timber
