--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".ui.admin.listDoctors.ListDoctorsActivity"
+            android:label="@string/title_activity_list_doctors"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".ui.admin.addDoctor.AddDoctorActivity">
 
         </activity>
@@ -25,7 +29,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.login.LoginActivity" />
+        <activity android:name=".ui.login.LoginActivity">
+
+        </activity>
     </application>
 
 </manifest>
