--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,10 @@ dependencies {
     // Lottie
     implementation 'com.airbnb.android:lottie:3.0.0'
 
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
