--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppThemeDoctorPatient"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".ui.doctor.listPatients.ListPatientsActivity"
             android:label="@string/title_activity_list_patients"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppThemeDoctorPatient.NoActionBar" />
         <activity android:name=".ui.patients.profile.PatientProfileActivity" />
         <activity
             android:name=".ui.admin.listDoctors.ListDoctorsActivity"
             android:label="@string/title_activity_list_doctors"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ui.admin.addDoctor.AddDoctorActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.admin.listDoctors.ListDoctorsActivity" />
-        </activity>
-        <activity android:name=".ui.doctor.addPacient.AddPatientActivity" />
+            android:theme="@style/AppThemeDoctorPatient.NoActionBar" />
+        <activity
+            android:name=".ui.admin.addDoctor.AddDoctorActivity"
+            android:parentActivityName=".ui.admin.listDoctors.ListDoctorsActivity" />
+        <activity
+            android:name=".ui.doctor.addPacient.AddPatientActivity"
+            android:parentActivityName=".ui.doctor.listPatients.ListPatientsActivity" />
         <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
