add reset password impl

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/AppThemeDoctorPatient"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
+            android:name=".ui.resetPassword.ResetPasswordActivity"
+            android:parentActivityName=".ui.login.LoginActivity" />
+        <activity android:name=".ui.admin.detailDoctor.DetailDoctorActivity" />
+        <activity
             android:name=".ui.doctor.listPatients.ListPatientsActivity"
             android:label="@string/title_activity_list_patients"
             android:theme="@style/AppThemeDoctorPatient.NoActionBar" />
