--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,11 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:2.23.2"
     kapt "com.google.dagger:dagger-android-processor:2.23.2"
 
+    //Glide
+
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
 
     // Timber
     implementation 'com.jakewharton.timber:timber:4.5.1'
